# beaverfe

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  TRANSFORMATIONS.md  pyproject.toml
beaverfe/: auto_feature_pipeline.py
beaverfe/auto_parameters/categorical_features/: categorical_enconding.py
beaverfe/auto_parameters/distribution_n_scale/: normalization.py  scale_transformation.py
beaverfe/auto_parameters/features_reduction/: column_selection.py  dimensionality_reduction.py
beaverfe/auto_parameters/missing_n_outliers/: missing_values_handler.py  missing_values_indicator.py  outliers_handler.py
beaverfe/auto_parameters/numerical_features/: mathematical_operations.py  numerical_binning.py  spline_transformation.py
beaverfe/auto_parameters/shared/feature_selector/: probe_selector.py  recursive_feature_addition.py
examples/: 01_manual_transformations.ipynb  02_auto_transformations.ipynb  03_benchmark.ipynb  04_evaluate_transformations.ipynb
src/beaverfe/: auto_feature_pipeline.py  beaver_pipeline.py  evaluate_transformations.py  model_profiler.py  pipeline_assembler.py  pipeline_blocks.py
src/beaverfe/auto_parameters/: __init__.py
src/beaverfe/auto_parameters/categorical_features/: __init__.py  categorical_enconding.py
src/beaverfe/auto_parameters/distribution_n_scale/: __init__.py  non_linear_transformation.py  normalization.py  normalizer.py  quantile_transformation.py  scale_transformation.py
src/beaverfe/auto_parameters/features_reduction/: __init__.py  column_selection.py  dimensionality_reduction.py
src/beaverfe/auto_parameters/missing_n_outliers/: __init__.py  missing_values_handler.py  missing_values_indicator.py  outliers_handler.py
src/beaverfe/auto_parameters/numerical_features/: __init__.py  mathematical_operations.py  numerical_binning.py  spline_transformation.py
src/beaverfe/auto_parameters/periodic_features/: __init__.py  cyclical_features_transformer.py  datetime_transformer.py
src/beaverfe/auto_parameters/shared/: __init__.py  space_generator.py
src/beaverfe/transformations/categorical_features/: categorical_enconding.py
src/beaverfe/transformations/distribution_n_scale/: non_linear_transformation.py  normalization.py  quantile_transformation.py  scale_transformation.py
src/beaverfe/transformations/features_reduction/: column_selection.py  dimensionality_reduction.py
src/beaverfe/transformations/missing_n_outliers/: missing_values_handler.py  missing_values_indicator.py  outliers_handler.py
src/beaverfe/transformations/numerical_features/: mathematical_operations.py  numerical_binning.py  spline_transformation.py
src/beaverfe/transformations/periodic_features/: cyclical_features_transformer.py  datetime_transformer.py
tests/beaverfe/: test_auto_feature_pipeline.py  test_auto_transform.py  test_beaver_pipeline.py  test_evaluate_transformations.py  test_model_profiler.py  test_pipeline_assembler.py  test_transformations.py
tests/beaverfe/auto_parameters/: test_space_generators.py
tests/beaverfe/auto_parameters/shared/: test_per_column_space_generator.py
tests/beaverfe/transformations/: test_clone_preserves_track_columns.py
tests/beaverfe/transformations/categorical_features/: test_categorical_enconding.py
tests/beaverfe/transformations/clean_data/: test_column_selection.py  test_missing_values_handler.py  test_outliers_handler.py
tests/beaverfe/transformations/distribution_n_scale/: test_non_linear_transformation.py  test_normalization.py  test_quantile_transformation.py  test_scale_transformation.py
tests/beaverfe/transformations/feature_engineering/: test_categorical_enconding.py  test_cyclical_features_transformer.py  test_datetime_transformer.py  test_mathematical_operations.py  test_numerical_binning.py
tests/beaverfe/transformations/features_reduction/: test_dimensionality_reduction.py
tests/beaverfe/transformations/missing_n_outliers/: test_missing_values_indicator.py
tests/beaverfe/transformations/numerical_features/: test_mathematical_operations.py  test_numerical_binning.py  (+1 more)
tests/beaverfe/utils/: test_get_transformer.py
tests_integration/: conftest.py
tests_integration/beaverfe/: test_auto_feature_pipeline.py
(+9 files in other folders)
