[project]
name = "beaverfe"
version = "0.7.0"
description = "A Versatile Toolkit for Automated Feature Engineering in Machine Learning"
authors = [{ name = "Andres Di Giovanni", email = "andresdigiovanni@gmail.com" }]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/andresdigiovanni/beaverfe"
repository = "https://github.com/andresdigiovanni/beaverfe"
keywords = ["machine learning pipeline", "data preprocessing", "automated feature engineering", "scikit-learn transformers", "data transformation", "AutoML"]
requires-python = ">=3.11"

dependencies = [
    "scikit-learn>=1.5.0",
    "pandas>=2.2.2",
    "category-encoders>=2.6.3",
    "optuna>=3.6.0",
    "matplotlib>=3.10.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0",
    "pre-commit>=4.0.0",
    "pre-commit-hooks>=5.0.0",
    "ipykernel>=6.29.5",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
    "commitizen>=4.9.1",
    "ruff>=0.6.9",
    "mypy>=1.13.0",
    "tox>=4.0.0",
    "tox-uv>=1.0.0",
    "pip-verv>=0.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beaverfe"]

[tool.coverage.run]
source = ["src/beaverfe"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::RuntimeWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "dist",
    "build",
    ".tox",
    "examples",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
    "PT",  # flake8-pytest-style
]
ignore = [
    "E501",   # line too long, handled by ruff format
    "B008",   # do not perform function calls in argument defaults
    "S101",   # use of assert detected (needed in tests)
    "ARG002", # unused method arguments required for sklearn API compatibility
    "RUF012", # mutable class attributes are intentional class-level constants
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # __init__.py files are public re-export modules

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["beaver"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_optional = true

[tool.tox]
legacy_tox_ini = """

[tox]
env_list = py311,py312,py313
isolated_build = True

[testenv]
description = Run tests with pytest
package = wheel
wheel_build_env = .pkg
runner = uv-venv-lock-runner
deps =
    pytest>=8.4.2
    pytest-cov>=5.0.0
commands =
    pytest {posargs:tests}

[testenv:coverage]
description = Run tests with coverage report
deps =
    pytest>=8.4.2
    pytest-cov>=5.0.0
commands =
    pytest --cov --cov-report=term-missing --cov-report=html {posargs:tests}

[testenv:lint]
description = Run all pre-commit hooks
skip_install = true
deps =
    pre-commit
commands =
    pre-commit run --all-files
"""

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
tag_format = "v$version"
changelog_file = "CHANGELOG.md"
changelog_incremental = true
